--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,10 +1,18 @@
 <!--index.wxml-->
-<scroll-view scroll-x>
-<view class='weather-wrapper'>
+<scroll-view scroll-x class='scroll-view-x'>
+<view class='weather-wrapper' wx:for="{{[1,2,3]}}">
 <view class='temp'>{{temp}}</view>
 <view class='weather'>{{weather}}</view>
-<image class='backgroundImage' src='https://images.unsplash.com/photo-1519120944692-1a8d8cfc107f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=89ec16a5cf7765e8a7a300bf6b72d131&auto=format&fit=crop&w=700&q=60'></image>
-</view>  
+</view>
 </scroll-view>
-<view class='title'><image class='titleIcon' src='https://raw.githubusercontent.com/udacity/cn-wechat-weather/4-1/images/time-icon.png'></image>未来24小时天气预测</view>
-<view class='weatherCols' wx:for="{{[1,2,3,4]}}"></view>
+<view class='weather-title'>
+<image class='forecast-icon' src='https://raw.githubusercontent.com/udacity/cn-wechat-weather/4-1/images/time-icon.png'></image>
+24小时天气预报概况</view>
+
+<scroll-view scroll-x class='wholeDayWeatherScroll'>
+<view class='wholeDayWeather' wx:for="{{[1,2,3,4,5,6,7,8]}}">
+<view class='period periodTemp'>12"</view>
+<view class='period periodWeather'>晴天</view>
+<view class='period periodIcon'>☀️</view>
+</view>
+</scroll-view>
