--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,18 +1,16 @@
 <!--index.wxml-->
-<scroll-view scroll-x class='scroll-view-x'>
-<view class='weather-wrapper' wx:for="{{[1,2,3]}}">
+<scroll-view scroll-x class='scroll-view-x' bindscroll="scrollX">
+<view class='weather-wrapper' wx:for="{{citys}}">
 <view class='temp'>{{temp}}</view>
 <view class='weather'>{{weather}}</view>
 </view>
 </scroll-view>
 <view class='weather-title'>
-<image class='forecast-icon' src='https://raw.githubusercontent.com/udacity/cn-wechat-weather/4-1/images/time-icon.png'></image>
-24小时天气预报概况</view>
-
+<image class='forecast-icon' src='https://raw.githubusercontent.com/udacity/cn-wechat-weather/4-1/images/time-icon.png'></image>24小时天气预报概况</view>
 <scroll-view scroll-x class='wholeDayWeatherScroll'>
-<view class='wholeDayWeather' wx:for="{{[1,2,3,4,5,6,7,8]}}">
-<view class='period periodTemp'>12"</view>
-<view class='period periodWeather'>晴天</view>
-<view class='period periodIcon'>☀️</view>
+<view class='wholeDayWeather' wx:for="{{forecastArr}}">
+<view class='period periodTemp'>{{item.temp}}"</view>
+<view class='period periodIcon'>{{weatherMap[item.weather]}}</view>
+<view class='period periodWeather'>{{weatherIocn[item.weather]}}</view>
 </view>
 </scroll-view>
