--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -23,6 +23,7 @@
 .forecast-icon{
   width: 36rpx;
   height: 24rpx;
+  padding-right: 10rpx;
 }
 .weather-title{
   text-align: center;
@@ -30,17 +31,23 @@
   font-size: 36rpx;
 }
 .wholeDayWeatherScroll{
- height: 600rpx;
- padding-top: 50rpx;
+  height: 600rpx;
+  padding-top: 50rpx;
   display: flex;
   white-space: nowrap;
+  background-image: url('https://images.unsplash.com/photo-1519120944692-1a8d8cfc107f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=89ec16a5cf7765e8a7a300bf6b72d131&auto=format&fit=crop&w=700&q=60');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 600rpx;
+  display: inline-block;
 }
 .wholeDayWeather{
-  width: 200rpx;
+  width: 250rpx;
   height: 750rpx;
   display: inline-block;
   border-right:1px solid whitesmoke;
-  font-size: 50rpx;
+  font-size: 36rpx;
   opacity: .7;
 }
 .period{
