--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,56 +1,30 @@
 /**index.wxss**/
-.scroll-view-x{
-  height: 600rpx;
-  display: flex;
-  white-space: nowrap;
+.tc{
+  text-align: center;
 }
 .weather-wrapper{
-  background-image: url('https://images.unsplash.com/photo-1519120944692-1a8d8cfc107f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=89ec16a5cf7765e8a7a300bf6b72d131&auto=format&fit=crop&w=700&q=60');
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 600rpx;
-  display: inline-block;
+  padding-bottom: 250rpx;
+  background-image: url(https://images.unsplash.com/photo-1519120944692-1a8d8cfc107f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=89ec16a5cf7765e8a7a300bf6b72d131&auto=format&fit=crop&w=700&q=60);
+  background-size: cover;
 }
 .temp{
   font-size: 200rpx;
-  text-align: center;
-  padding-top: 100rpx;
 }
-.weather{
-  text-align: center;
+.location{
+  margin-bottom: 174rpx;
+  font-size: 24rpx;
+  opacity: .8;
 }
-.forecast-icon{
-  width: 36rpx;
-  height: 24rpx;
-  padding-right: 10rpx;
-}
-.weather-title{
-  text-align: center;
-  opacity: .5;
-  font-size: 36rpx;
-}
-.wholeDayWeatherScroll{
-  height: 600rpx;
-  padding-top: 50rpx;
+.forecastList-wrapper{
+  height: 450rpx;
   display: flex;
   white-space: nowrap;
-  background-image: url('https://images.unsplash.com/photo-1519120944692-1a8d8cfc107f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=89ec16a5cf7765e8a7a300bf6b72d131&auto=format&fit=crop&w=700&q=60');
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 600rpx;
-  display: inline-block;
 }
-.wholeDayWeather{
-  width: 250rpx;
-  height: 750rpx;
+.forecast-item{
   display: inline-block;
-  border-right:1px solid whitesmoke;
-  font-size: 36rpx;
-  opacity: .7;
-}
-.period{
-  padding-top: 80rpx;
+  width: 33%;
+  height: 100%;
   text-align: center;
+  padding-top: 50rpx;
+  line-height: 110rpx;
 }
