--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,30 +1,29 @@
-/**index.wxss**/
-.tc{
-  text-align: center;
-}
+/* pages/index/index.wxss */
 .weather-wrapper{
-  padding-bottom: 250rpx;
-  background-image: url(https://images.unsplash.com/photo-1519120944692-1a8d8cfc107f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=89ec16a5cf7765e8a7a300bf6b72d131&auto=format&fit=crop&w=700&q=60);
-  background-size: cover;
+  width: 750rpx;
+  height: 760rpx;
+  position: relative;
 }
-.temp{
+.title{
   font-size: 200rpx;
-}
-.location{
-  margin-bottom: 174rpx;
-  font-size: 24rpx;
-  opacity: .8;
-}
-.forecastList-wrapper{
-  height: 450rpx;
-  display: flex;
-  white-space: nowrap;
-}
-.forecast-item{
-  display: inline-block;
-  width: 33%;
-  height: 100%;
+  line-height: 280rpx;
   text-align: center;
-  padding-top: 50rpx;
-  line-height: 110rpx;
+  opacity: .8;
+  padding-top: 30%;
+}
+.weather{
+  font-size: 40rpx;
+  line-height: 56rpx;
+  text-align: center;
+  opacity: .65;
+}
+.weather-bg{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
 }
