--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--pages/index/index.wxml-->
 <view class='weather-wrapper'>
-<view class='title'>20°</view>
-<view class='weather'>晴天</view>
-<image class='weather-bg' src='/images/sunny-bg.png' mode='scaleToFil'></image>
+<view class='title'>{{nowTemp}}°</view>
+<view class='weather'>{{nowWeather}}</view>
+<image class='weather-bg' src='{{nowWeatherBackground}}' mode='scaleToFil'></image>
 </view>
