--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,3 +4,16 @@
 <view class='weather'>{{nowWeather}}</view>
 <image class='weather-bg' src='{{nowWeatherBackground}}' mode='scaleToFil'></image>
 </view>
+<view class='forecast-title'>
+<image class='time-icon' src='/images/time-icon.png'></image>
+未来24小时天气预报
+</view>
+<scroll-view scroll-x style='margin-top:40rpx;'>
+<view class='forecast-list'>
+<view class='forecast-item' wx:for="{{forecast}}">
+<view class='forecast-time'>{{item.time}}</view>
+<image class='forecast-weather' src='{{item.iconPath}}'></image>
+<view class='forecast-temp'>{{item.temp}}</view>
+</view>
+</view>
+</scroll-view>
