--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -27,6 +27,18 @@
   bottom: 0;
   z-index: -1;
 }
+.weather-subwrapper{
+  width: 100%;
+  height: 80rpx;
+  line-height: 80rpx;
+  box-sizing: border-box;
+  border-top: 1px solid silver;
+  position: absolute;
+  left: 0;
+  bottom:0;
+  display: flex;
+  justify-content: space-around;
+}
 .forecast-title{
   font-size: 30rpx;
   line-height: 42rpx;
@@ -46,8 +58,8 @@
 }
 .forecast-list{
   display: flex;
-  font-size: 36rpx;
-  opacity: .4;
+  font-size: 30rpx;
+  opacity: .7;
 }
 .forecast-list view{
   margin-bottom: 40rpx;
